--- a/kube-99-zipkin/zipkin/charts/zipkin-elasticsearch/templates/configMap.yml
+++ b/kube-99-zipkin/zipkin/charts/zipkin-elasticsearch/templates/configMap.yml
@@ -1,6 +1,6 @@
 #db_database: 'OnePlanetV2'
 apiVersion: v1
-kind: ConfigMap
+kind: mongodb-configmap.yaml
 metadata:
   name: local-zipkin-elasticsearch
 data:
